--- a/asset/css/registration-user-details.css
+++ b/asset/css/registration-user-details.css
@@ -6,8 +6,12 @@
    color: #4D4C52;
 }
 
+.auth_left_form {
+   padding: 24px
+}
+
 .auth_user_details .user_details_form {
-   margin-top: 50px;
+   margin-top: 48px;
 }
 
 .auth_user_details .user_details_form .input_box {
@@ -174,9 +178,6 @@
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-   .auth_user_details {
-      padding: 50px 0px;
-   }
 
    .user_details_auth_form {
       max-height: 100vh;
@@ -186,24 +187,24 @@
 
 @media (min-width: 576px) and (max-width: 767px) {
 
-   .auth_user_details {
-      padding: 50px 0px;
-   }
-
 }
 
 @media (max-width: 575px) {
    
    .auth_user_details .user_details_form .input_box {
-      width: 97%;
+      width: 100%;
    }
 
    .auth_user_details .user_details_form .form_submit {
-      width: 97%;
+      width: 100%;
    }
 
    .auth_user_details{
-      padding: 30px 0px;
+      padding:  0px;
    }
+
+   .auth_user_details .user_details_form {
+   margin-top: 24px;
+}
 
 }
